Updated schedule display and fixes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <header>
             <h1>Rīgas Valdorfskolas Interešu Izglītības Plānojums</h1>
             <p>I semestris 2025/2026</p>
+            <button id="theme-toggle">Tumšā Mode 🌙</button> <!-- </button> -->
         </header>
 
         <main>
@@ -43,7 +44,7 @@
         </main>
 
         <footer>
-            <p>Interešu izglītības plānojums 25/26 RVDS I.sem. Kontakts: A. Lāce, 27493715</p>
+            <p>Interešu izglītības plānojums 25/26 RVDS I.sem. Kontakts: Aija Lāce, 27493715</p>
             <a href="schedule.pdf" download>Lejupielādēt PDF</a>
         </footer>
     </div>
