Updated schedule display and fixes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <main>
             <div class="search-section">
                 <label for="searchInput">Meklēt pēc pulciņa, skolotāja vai klases:</label> <!-- Pievienoju piemērus atpakaļ, lai vecāki saprastu ātrāk -->
-                <input type="text" id="searchInput" list="suggestions" placeholder="Ierakstiet šeit...">
-                <datalist id="suggestions"></datalist>
+                <select id="searchInput">
+                </select>
                 <button onclick="clearSearch()">Notīrīt</button>
                 <button onclick="logout()">Iziet</button>
             </div>
