--- a/index.html
+++ b/index.html
@@ -24,22 +24,38 @@
 
     <!-- Galvenais saturs (slēpts līdz login) -->
     <div id="mainContent" class="hidden">
-        <header>
+<header>
             <h1>Rīgas Valdorfskolas Interešu Izglītības Plānojums</h1>
             <p>I semestris 2025/2026</p>
-            <button id="theme-toggle">Tumšā Mode 🌙</button> <!-- </button> -->
+            <div style="position: absolute; top: 10px; right: 10px;">
+                <label class="toggle-switch">
+                    <input type="checkbox" id="address-toggle" checked>
+                    <span class="slider">
+                        <span class="slider-text-k">K</span>
+                        <span class="slider-text-s">Š</span>
+                    </span>
+                </label>
+            </div>
+            <button id="theme-toggle">Tumšā Mode 🌙</button>
         </header>
 
         <main>
-            <div class="search-section">
-                <label for="searchInput">Meklēt pēc pulciņa, skolotāja vai klases:</label> <!-- Pievienoju piemērus atpakaļ, lai vecāki saprastu ātrāk -->
-                <select id="searchInput">
+            <div class="nav-box">
+                <div class="radio-group">
+                    <label><input type="radio" name="section" value="pulcint" checked> Pulciņu laiki</label>
+                    <label><input type="radio" name="section" value="stundu"> Stundu saraksts</label>
+                    <label><input type="radio" name="section" value="konsultaciju"> Konsultāciju laiki</label>
+                </div>
+                <select id="grade-select">
+                    <option value="">Izvēlieties klasi</option>
                 </select>
-                <button onclick="clearSearch()">Notīrīt</button>
-                <button onclick="logout()">Iziet</button>
+                <div class="button-group">
+                    <button onclick="clearSelections()">Notīrīt</button>
+                    <button onclick="logout()">Iziet</button>
+                </div>
             </div>
 
-            <div id="results"></div>
+            <div id="content"></div>
             <div id="noResults" class="hidden">Nav atrast atbilstošu. Pamēģiniet citu meklēšanu!</div>
         </main>
 
